	PR c++/84181 - ICE with lambda parm in template argument.

* tree.c (strip_typedefs_expr): Use cp_tree_operand_length.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@257339 138bc75d-0d04-0410-961f-82ee72b054a4